--- a/index.html
+++ b/index.html
@@ -9,18 +9,21 @@
 </head>
 
 <body>
-    <div class="container">
         <header>
-            <h1>Your Name's Blog</h1>
             <div class="profile-image">
                 <img src="your-profile-image.jpg" alt="Your Name">
             </div>
+
+            <h1>Joel Blenman Blog</h1>
             <p>A Young and Talented Web Developer and User Interface Designer</p>
         </header>
+        <div class="container">
         <main>
             <article class="blog-post">
-                <h2>Blog Post Title 1</h2>
-                <p class="blog-post-date">September 27, 2023 by Your Name</p>
+                <div class="title-date-created">
+                    <h2>Blog Post Title 1</h2>
+                    <p class="blog-post-date">September 27, 2023 by Your Name</p>
+                </div>
                 <img src="image1.jpg" alt="Image 1" class="float-left">
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum nec metus ac ante dapibus
                     posuere.</p>
@@ -58,10 +61,11 @@
                 </ul>
             </section>
         </aside>
+        </div>
         <footer>
             <p>Copyright &copy; 2023, Your Name</p>
         </footer>
-    </div>
+
 </body>
 
 </html>
