added profile image

--- a/index.html
+++ b/index.html
@@ -9,35 +9,47 @@
 </head>
 
 <body>
-        <header>
-            <div class="profile-image">
-                <img src="your-profile-image.jpg" alt="Your Name">
-            </div>
+    <!-- header -->
+    <header>
+        <div class="profile-image">
+            <img src="/images/PictureDay-min.jpg" alt="Joel Blenman" height="75" width="75" >
+        </div>
 
-            <h1>Joel Blenman Blog</h1>
-            <p>A Young and Talented Web Developer and User Interface Designer</p>
-        </header>
-        <div class="container">
+        <h1>Joel Blenman Blog</h1>
+        <p>A Young and Talented Web Developer and User Interface Designer</p>
+    </header>
+    <!-- main content -->
+    <div class="container">
         <main>
+            <!-- Blog post 1 -->
             <article class="blog-post">
                 <div class="title-date-created">
                     <h2>Blog Post Title 1</h2>
                     <p class="blog-post-date">September 27, 2023 by Your Name</p>
                 </div>
-                <img src="image1.jpg" alt="Image 1" class="float-left">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum nec metus ac ante dapibus
-                    posuere.</p>
+                <div class="image-paragraph">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum nec metus ac ante dapibus
+                        posuere.</p>
+                    <img src="image1.jpg" alt="Image 1" class="float-left">
+                </div>
                 <p>Quisque consequat nunc ut lacinia efficitur. Nullam nec mi vel purus scelerisque malesuada.</p>
             </article>
+
+            <!-- Blog post 2 -->
             <article class="blog-post">
-                <h2>Blog Post Title 2</h2>
-                <p class="blog-post-date">October 5, 2023 by Your Name</p>
-                <img src="image2.jpg" alt="Image 2" class="float-right">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum nec metus ac ante dapibus
-                    posuere.</p>
+                <div class="title-date-created">
+                    <h2>Blog Post Title 2</h2>
+                    <p class="blog-post-date">October 5, 2023 by Your Name</p>
+                </div>
+                <div class="image-paragraph">
+                    <img src="image2.jpg" alt="Image 2" class="float-right">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum nec metus ac ante dapibus
+                        posuere.</p>
+                </div>
                 <p>Quisque consequat nunc ut lacinia efficitur. Nullam nec mi vel purus scelerisque malesuada.</p>
             </article>
         </main>
+        <!-- About, social media and article section -->
         <aside>
             <section id="about">
                 <h3>About</h3>
@@ -61,10 +73,11 @@
                 </ul>
             </section>
         </aside>
-        </div>
-        <footer>
-            <p>Copyright &copy; 2023, Your Name</p>
-        </footer>
+    </div>
+    <!-- Footer section -->
+    <footer>
+        <p>Copyright &copy; 2023, Your Name</p>
+    </footer>
 
 </body>
 
