--- a/index.html
+++ b/index.html
@@ -21,39 +21,45 @@
     <!-- main content -->
     <div class="container">
         <main>
-            <!-- Blog post 1 -->
+            <!-- Blog post 1 (Web Development) -->
             <article class="blog-post">
                 <div class="title-date-created">
-                    <h2>Blog Post Title 1</h2>
-                    <p class="blog-post-date">September 27, 2023 by Your Name</p>
+                    <h2>Web Development: A Journey into Building the Web</h2>
+                    <p class="blog-post-date">September 27, 2023 by Joel Blenman</p>
                 </div>
                 <div class="image-paragraph">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum nec metus ac ante dapibus
-                        posuere.</p>
-                    <img src="image1.jpg" alt="Image 1" class="float-left">
+                    <div>
+                        <img src="/images/pexels-людмила-шалимова-18267776.jpg" class="img-1" width="150" height="150">
+                    </div>
+                    <div>
+                        <p>Web development has always fascinated me. It's the art of crafting the digital world we interact with daily. Whether it's designing beautiful websites or creating interactive web applications, web development offers endless possibilities for creativity and innovation.</p>
+                    </div>
                 </div>
-                <p>Quisque consequat nunc ut lacinia efficitur. Nullam nec mi vel purus scelerisque malesuada.</p>
+                <p>From HTML and CSS for structure and styling, to JavaScript for interactivity, the journey of becoming a web developer is an exciting one filled with learning and growth.</p>
             </article>
-        </hr>
-            <!-- Blog post 2 -->
+            <hr>
+            <!-- Blog post 2 (UX/UI Design with Figma) -->
             <article class="blog-post">
                 <div class="title-date-created">
-                    <h2>Blog Post Title 2</h2>
-                    <p class="blog-post-date">October 5, 2023 by Your Name</p>
+                    <h2>UX/UI Design: Crafting User Experiences with Figma</h2>
+                    <p class="blog-post-date">October 5, 2023 by Joel Blenman</p>
                 </div>
                 <div class="image-paragraph">
-                    <img src="image2.jpg" alt="Image 2" class="float-right">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum nec metus ac ante dapibus
-                        posuere.</p>
+                    <div>
+                        <p>UX/UI design is all about creating seamless and delightful user experiences. One of my favorite design tools for this purpose is Figma. With Figma, you can collaborate in real-time, prototype interactions, and create pixel-perfect designs.</p>
+                    </div>
+                    <div>
+                        <img src="/images/pexels-nathan-tran-16387810.jpg" class="img-2" width="150" height="150">
+                    </div>
                 </div>
-                <p>Quisque consequat nunc ut lacinia efficitur. Nullam nec mi vel purus scelerisque malesuada.</p>
+                <p>From wireframing to high-fidelity mockups, Figma empowers designers to turn their ideas into stunning visuals and interactive prototypes, making the design process both efficient and enjoyable.</p>
             </article>
         </main>
-        <!-- About, social media and article section -->
+        <!-- About, social media, and article section -->
         <aside>
             <section id="about">
                 <h3>About</h3>
-                <p>A short paragraph about yourself.</p>
+                <p>Not long ago, I aspired to be an architect due to my passion for design and creativity. However, I later discovered my interest in software and became proficient in tools like Blender, AutoCAD, and SketchUp. Surprisingly, I ended up studying computer science at UWI. The world of computer science offered endless possibilities, and now I can learn and build to my heart's content. This is my journey into the world of technology. Peace!</p>
             </section>
             <section id="social-media">
                 <h3>Social Media</h3>
@@ -76,7 +82,7 @@
     </div>
     <!-- Footer section -->
     <footer>
-        <p>Copyright &copy; 2023, Your Name</p>
+        <p>Copyright &copy; 2023, Joel Blenman</p>
     </footer>
 
 </body>
