added new images

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 </div>
                 <div class="image-paragraph">
                     <div>
-                        <img src="/images/pexels-людмила-шалимова-18267776.jpg" class="img-1" width="150" height="150">
+                        <img src="/images/code.jpg" class="img-1" width="150" height="150">
                     </div>
                     <div>
                         <p>Web development has always fascinated me. It's the art of crafting the digital world we interact with daily. Whether it's designing beautiful websites or creating interactive web applications, web development offers endless possibilities for creativity and innovation.</p>
@@ -49,7 +49,7 @@
                         <p>UX/UI design is all about creating seamless and delightful user experiences. One of my favorite design tools for this purpose is Figma. With Figma, you can collaborate in real-time, prototype interactions, and create pixel-perfect designs.</p>
                     </div>
                     <div>
-                        <img src="/images/pexels-nathan-tran-16387810.jpg" class="img-2" width="150" height="150">
+                        <img src="/images/sketch.jpg" class="img-2" width="200" height="150">
                     </div>
                 </div>
                 <p>From wireframing to high-fidelity mockups, Figma empowers designers to turn their ideas into stunning visuals and interactive prototypes, making the design process both efficient and enjoyable.</p>
