change header to use flexbox

--- a/index.html
+++ b/index.html
@@ -32,10 +32,14 @@
                         <img src="/images/code.jpg" class="img-1" width="150" height="150">
                     </div>
                     <div>
-                        <p>Web development has always fascinated me. It's the art of crafting the digital world we interact with daily. Whether it's designing beautiful websites or creating interactive web applications, web development offers endless possibilities for creativity and innovation.</p>
+                        <p>Web development has always fascinated me. It's the art of crafting the digital world we
+                            interact with daily. Whether it's designing beautiful websites or creating interactive web
+                            applications, web development offers endless possibilities for creativity and innovation.
+                        </p>
                     </div>
                 </div>
-                <p>From HTML and CSS for structure and styling, to JavaScript for interactivity, the journey of becoming a web developer is an exciting one filled with learning and growth.</p>
+                <p>From HTML and CSS for structure and styling, to JavaScript for interactivity, the journey of becoming
+                    a web developer is an exciting one filled with learning and growth.</p>
             </article>
             <hr>
             <!-- Blog post 2 (UX/UI Design with Figma) -->
@@ -46,20 +50,27 @@
                 </div>
                 <div class="image-paragraph">
                     <div>
-                        <p>UX/UI design is all about creating seamless and delightful user experiences. One of my favorite design tools for this purpose is Figma. With Figma, you can collaborate in real-time, prototype interactions, and create pixel-perfect designs.</p>
+                        <p>UX/UI design is all about creating seamless and delightful user experiences. One of my
+                            favorite design tools for this purpose is Figma. With Figma, you can collaborate in
+                            real-time, prototype interactions, and create pixel-perfect designs.</p>
                     </div>
                     <div>
                         <img src="/images/sketch.jpg" class="img-2" width="200" height="150">
                     </div>
                 </div>
-                <p>From wireframing to high-fidelity mockups, Figma empowers designers to turn their ideas into stunning visuals and interactive prototypes, making the design process both efficient and enjoyable.</p>
+                <p>From wireframing to high-fidelity mockups, Figma empowers designers to turn their ideas into stunning
+                    visuals and interactive prototypes, making the design process both efficient and enjoyable.</p>
             </article>
         </main>
         <!-- About, social media, and article section -->
         <aside>
             <section id="about">
                 <h3>About</h3>
-                <p>Not long ago, I aspired to be an architect due to my passion for design and creativity. However, I later discovered my interest in software and became proficient in tools like Blender, AutoCAD, and SketchUp. Surprisingly, I ended up studying computer science at UWI. The world of computer science offered endless possibilities, and now I can learn and build to my heart's content. This is my journey into the world of technology. Peace!</p>
+                <p>Not long ago, I aspired to be an architect due to my passion for design and creativity. However, I
+                    later discovered my interest in software and became proficient in tools like Blender, AutoCAD, and
+                    SketchUp. Surprisingly, I ended up studying computer science at UWI. The world of computer science
+                    offered endless possibilities, and now I can learn and build to my heart's content. This is my
+                    journey into the world of technology. Peace!</p>
             </section>
             <section id="social-media">
                 <h3>Social Media</h3>
